--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "Support ticket app",
   "main": "server.js",
   "scripts": {
+    "client": "npm start --prefix frontend",
     "start": "node backend/server.js",
-    "server": "nodemon backend/server.js"
+    "server": "nodemon backend/server.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Rob Regan",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
+    "concurrently": "^7.0.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-async-handler": "^1.2.0",
